last fixes part2 19.02

--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
 			</div>
 			<div class="air-h-center">
 				<div id="air-d-menu">
-					<ul>
-						<li><a href="#">Эксперты</a></li>
-						<li><a href="#">Отзывы</a></li>
-						<li><a href="#">Успешные кейсы</a></li>
-						<li><a href="#">Программа</a></li>
-						<li><a href="#">Контакты</a></li>
+					<ul class="menu">
+						<li><a href="#air-format">Формат обучения</a></li>
+						<li><a href="#air-program">Программа курса</a></li>
+						<li><a href="#air-packages">Цены</a></li>
+						<li><a href="#air-experts">Эксперты</a></li>
+						<li><a href="#air-feedbacks">Наши кейсы</a></li>
+						<li><a href="#air-footer">Контакты</a></li>
 					</ul>
 				</div>
 			</div>
@@ -93,12 +94,13 @@
 			</div>
 			<div id="air-m-menu">
 				<div class="menu-close">✕</div>
-				<ul>
-					<li><a href="#">Эксперты</a></li>
-					<li><a href="#">Отзывы</a></li>
-					<li><a href="#">Успешные кейсы</a></li>
-					<li><a href="#">Программа</a></li>
-					<li><a href="#">Контакты</a></li>
+				<ul class="menu">
+					<<li><a href="#air-format">Формат обучения</a></li>
+					<li><a href="#air-program">Программа курса</a></li>
+					<li><a href="#air-packages">Цены</a></li>
+					<li><a href="#air-experts">Эксперты</a></li>
+					<li><a href="#air-feedbacks">Наши кейсы</a></li>
+					<li><a href="#air-footer">Контакты</a></li>
 				</ul>
 			</div>
 		</header>
@@ -184,7 +186,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="air-results" class="air-section">
+		<div id="air-results" class="air-section anchor results">
 			<div class="container">
 				<div class="results-el"><img src="img/intro-sp2.png" alt="element"></div>
 				<h2>В результате <br>курса от <strong>AIR Academy</strong> <br>ты узнаешь</h2>
@@ -221,7 +223,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="air-format" class="air-section">
+		<div id="air-format" class="air-section anchor">
 			<div class="format-el format-el1"><img src="img/format-el.png" alt="format"></div>
 			<div class="format-el format-el2"><img src="img/format-el2.png" alt="format"></div>
 
@@ -273,7 +275,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="air-program" class="air-section">
+		<div id="air-program" class="air-section anchor">
 			<h2><strong>Программа</strong> курса</h2>
 
 			<div class="studies">
@@ -483,7 +485,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="air-packages" class="air-section">
+		<div id="air-packages" class="air-section anchor">
 			<div class="container">
 				<h2>Выбери свой <strong>пакет обучения</strong></h2>
 
@@ -653,7 +655,7 @@
 					<div class="counter-subtitle">До конца акции</div>
 					<div class="counter">
 						<div class="counter-numbers" id="countdown">
-							<div class="cn-days cn-item"><span class="days">2</span>дня</div>
+							<div class="cn-days cn-item"><span class="days">2</span>дней</div>
 							<div class="cn-hours cn-item"><span class="hours">12</span>часов</div>
 							<div class="cn-minutes cn-item"><span class="minutes">45</span>минут</div>
 							<div class="cn-seconds cn-item"><span class="seconds">34</span>секунд</div>
@@ -662,97 +664,99 @@
 				</div>
 			</div>
 		</div>
-		<div id="air-experts" class="air-section">
+		<div id="air-experts" class="air-section anchor">
 			<h2><strong>Эксперты</strong></h2>
 
-			<div class="experts owl-carousel">
-				<div class="item">
-					<div class="expert">
-						<div class="expert-image">
-							<img src="img/expert1.png" alt="expert">
-							<span class="expert-role">Директор<br>AIR Academy</span>
-						</div>
-						<h4 class="expert-title">Вячеслав Полиновский</h4>
-						<div class="expert-content">
-							<p>Директор AIR Academy. <br>Руководитель крупных образовательных проектов: курсы, школа, институт. Разрабатывал и внедрял разнообразные методики обучения: от курсового обучения для школьников и взрослых, до стандартов высшего образования. Обучил более 100 инструкторов «Тренинг для тренеров: как учить не скучно». Выпустил больше 2000 студентов. Более 10 лет в образовании и 3-х лет в медиа</p>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="expert">
-						<div class="expert-image">
-							<img src="img/expert2.png" alt="expert">
-							<span class="expert-role">Youtube<br>эксперт</span>
-						</div>
-						<h4 class="expert-title">Алексей Токовенко</h4>
-						<div class="expert-content">
-							<p>Product Manager AIR Academy. <br>Сертифицированный YouTube-специалист, сертифицированный бизнес-тренер. <br>Работал с каналами: F.ua, Телебачення Торонто, Andro-News, Компанией NewsOne и другими.</p>
+			<div class="experts-outer">
+				<div class="experts owl-carousel">
+					<div class="item">
+						<div class="expert">
+							<div class="expert-image">
+								<img src="img/expert1.png" alt="expert">
+								<span class="expert-role">Директор<br>AIR Academy</span>
+							</div>
+							<h4 class="expert-title">Вячеслав Полиновский</h4>
+							<div class="expert-content">
+								<p>Директор AIR Academy. <br>Руководитель крупных образовательных проектов: курсы, школа, институт. Разрабатывал и внедрял разнообразные методики обучения: от курсового обучения для школьников и взрослых, до стандартов высшего образования. Обучил более 100 инструкторов «Тренинг для тренеров: как учить не скучно». Выпустил больше 2000 студентов. Более 10 лет в образовании и 3-х лет в медиа</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="item">
-					<div class="expert">
-						<div class="expert-image">
-							<img src="img/expert3.png" alt="expert">
-							<span class="expert-role">Youtube<br>Producer</span>
-						</div>
-						<h4 class="expert-title">Алексей Омельянович</h4>
-						<div class="expert-content">
-							<p>Producer of Commercial Projects. <br>Продюсер каналов крупных брендов. McDonald’s и многие другие</p>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="expert">
-						<div class="expert-image">
-							<img src="img/expert4.png" alt="expert">
-							<span class="expert-role">Youtube<br>эксперт</span>
-						</div>
-						<h4 class="expert-title">Анастасия Кузнецова</h4>
-						<div class="expert-content">
-							<p>Development Manager AIR Network. <br>Сертифицированный YouTube-специалист <br>Эксперт по развитию каналов AIR. <br>Работает с более чем 50 каналами: Ольга Матвей, Nepeta Страшилки, Demian Volkov, Лиза Дидковская, Alex Boyko, Citrus.ua и другие.</p>
+					<div class="item">
+						<div class="expert">
+							<div class="expert-image">
+								<img src="img/expert2.png" alt="expert">
+								<span class="expert-role">Youtube<br>эксперт</span>
+							</div>
+							<h4 class="expert-title">Алексей Токовенко</h4>
+							<div class="expert-content">
+								<p>Product Manager AIR Academy. <br>Сертифицированный YouTube-специалист, сертифицированный бизнес-тренер. <br>Работал с каналами: F.ua, Телебачення Торонто, Andro-News, Компанией NewsOne и другими.</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="item">
-					<div class="expert">
-						<div class="expert-image">
-							<img src="img/expert5.png" alt="expert">
-							<span class="expert-role">Video<br>Editor</span>
-						</div>
-						<h4 class="expert-title">Сергей Коцур</h4>
-						<div class="expert-content">
-							<p>Senior Video Editor в AIR Rocket. <br>Работал с такими брендами: ЕПIЦЕНТР, Kompozit, Hankook, Intertop и другими.</p>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="expert">
-						<div class="expert-image">
-							<img src="img/expert6.png" alt="expert">
-							<span class="expert-role">YouTube<br>эксперт</span>
-						</div>
-						<h4 class="expert-title">Максим Яковлев</h4>
-						<div class="expert-content">
-							<p>Product Management Team Lead AIR Network. <br>Маркетолог, SEO специалист, эксперт по развитию YouTube-каналов. Сертифицированный специалист YouTube, Google Analytics и Google Ads Video. <br>Развивает каналы медиахолдинга Komandda.com, в который входят такие каналы, как Keddr.com, Kaddr.com, Veddro.com и др.</p>
+					<div class="item">
+						<div class="expert">
+							<div class="expert-image">
+								<img src="img/expert3.png" alt="expert">
+								<span class="expert-role">Youtube<br>Producer</span>
+							</div>
+							<h4 class="expert-title">Алексей Омельянович</h4>
+							<div class="expert-content">
+								<p>Producer of Commercial Projects. <br>Продюсер каналов крупных брендов. McDonald’s и многие другие</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="item">
-					<div class="expert">
-						<div class="expert-image">
-							<img src="img/expert7.png" alt="expert">
-							<span class="expert-role"><span>Youtube<br>сценарист</span></span>
+					<div class="item">
+						<div class="expert">
+							<div class="expert-image">
+								<img src="img/expert4.png" alt="expert">
+								<span class="expert-role">Youtube<br>эксперт</span>
+							</div>
+							<h4 class="expert-title">Анастасия Кузнецова</h4>
+							<div class="expert-content">
+								<p>Development Manager AIR Network. <br>Сертифицированный YouTube-специалист <br>Эксперт по развитию каналов AIR. <br>Работает с более чем 50 каналами: Ольга Матвей, Nepeta Страшилки, Demian Volkov, Лиза Дидковская, Alex Boyko, Citrus.ua и другие.</p>
+							</div>
 						</div>
-						<h4 class="expert-title">Андрей Иолкин</h4>
-						<div class="expert-content">
-							<p>Screenwriter. <br>Сценарист AIR Rocket. <br>Актер</p>
+					</div>
+					<div class="item">
+						<div class="expert">
+							<div class="expert-image">
+								<img src="img/expert5.png" alt="expert">
+								<span class="expert-role">Video<br>Editor</span>
+							</div>
+							<h4 class="expert-title">Сергей Коцур</h4>
+							<div class="expert-content">
+								<p>Senior Video Editor в AIR Rocket. <br>Работал с такими брендами: ЕПIЦЕНТР, Kompozit, Hankook, Intertop и другими.</p>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="expert">
+							<div class="expert-image">
+								<img src="img/expert6.png" alt="expert">
+								<span class="expert-role">YouTube<br>эксперт</span>
+							</div>
+							<h4 class="expert-title">Максим Яковлев</h4>
+							<div class="expert-content">
+								<p>Product Management Team Lead AIR Network. <br>Маркетолог, SEO специалист, эксперт по развитию YouTube-каналов. Сертифицированный специалист YouTube, Google Analytics и Google Ads Video. <br>Развивает каналы медиахолдинга Komandda.com, в который входят такие каналы, как Keddr.com, Kaddr.com, Veddro.com и др.</p>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="expert">
+							<div class="expert-image">
+								<img src="img/expert7.png" alt="expert">
+								<span class="expert-role"><span>Youtube<br>сценарист</span></span>
+							</div>
+							<h4 class="expert-title">Андрей Иолкин</h4>
+							<div class="expert-content">
+								<p>Screenwriter. <br>Сценарист AIR Rocket. <br>Актер</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="air-feedbacks" class="air-section">
+		<div id="air-feedbacks" class="air-section anchor">
 			<h2>Наши <strong>кейсы</strong></h2>
 
 			<div class="feedbacks owl-carousel">
@@ -944,7 +948,7 @@
 				</div>
 			</div>
 		</div>
-		<footer id="air-footer" class="air-section">
+		<footer id="air-footer" class="air-section anchor">
 			<div class="footer-enroll">
 				<div class="fe-man"><img src="img/footer-man.png" alt="man"></div>
 				<div class="fe-youtube">
